--- a/package.json
+++ b/package.json
@@ -16,10 +16,12 @@
     "test:watch": "vitest",
     "test:coverage": "vitest run --coverage",
     "test:ui": "vitest --ui",
+    "bench": "vitest bench",
+    "bench:watch": "vitest bench --watch",
     "build": "tsc",
     "build:watch": "tsc --watch",
     "clean": "rm -rf dist",
-    "prepare": "npm run build",
+    "prepare": "husky",
     "prepublishOnly": "npm run build",
     "lint": "eslint src/**/*.ts",
     "format": "prettier --write \"src/**/*.ts\"",
@@ -48,6 +50,8 @@
     "@vitest/coverage-v8": "^2.0.0",
     "@vitest/ui": "^2.0.0",
     "eslint": "^8.57.0",
+    "husky": "^9.1.7",
+    "lint-staged": "^16.2.7",
     "prettier": "^3.2.5",
     "typescript": "^5.3.0",
     "vitest": "^2.0.0"
@@ -61,5 +65,12 @@
   },
   "files": [
     "dist"
-  ]
+  ],
+  "lint-staged": {
+    "*.ts": [
+      "prettier --write",
+      "eslint --fix",
+      "vitest related --run"
+    ]
+  }
 }
